# caw

./: .env  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  system.rs
src-tauri/src/event/: mod.rs  receive.rs  send.rs
src/components/: bottom-navigation.tsx  dashboard.tsx  file-share.tsx  language-provider.tsx  ldap-server.tsx  personal-data.tsx  quick-actions.tsx  sidebar.tsx  theme-provider.tsx  web-server.tsx
src/components/ui/: progress.tsx  sonner.tsx
src/lib/: utils.ts
src/styles/: globals.css
